--- a/style.css
+++ b/style.css
@@ -19,3 +19,22 @@
     padding: 9px 25px;
     cursor: pointer;
 }
+.cat1, .cat2, .cat3{
+     border-radius: 10px;
+     padding: 10px 30px;
+}
+.cat1{
+    background-color: orange;
+} 
+.cat2{
+    background-color: orchid;
+}
+.cat3{
+    background-color: lightskyblue;
+}
+.categories h1{
+    color: white;
+}
+.categories img{
+    width: 100px;
+}
