--- a/style.css
+++ b/style.css
@@ -38,3 +38,12 @@
 .categories img{
     width: 100px;
 }
+.card{
+ border: none;
+ border-radius: 8px;
+ box-shadow: 10px 10px 10px lightgrey;
+}
+.card-footer{
+background-color: white;
+border-top: none;
+}
